--- a/templates/index.html
+++ b/templates/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo App</title>
 </head>
+
 <body>
     <h1>Todos</h1>
     <ul>
         {% for todo in todos %}
-            <li>
-                <input type="checkbox" name="done" {% if todo['done'] %} checked disabled onchange="this.form.submit()">
-                <span {%if todo['done'] %} style="text-decoration: line-through;" {%endif%}>{{ todo['task'] }}</span>
-                <a href="{{url_for('check', index=loop.index0)}}">Check</a>
-                <a href="{{url_for('edit', index=loop.index0)}}">Edit</a>
-                <a href="{{url_for('delete', index=loop.index0)}}">Delete</a>
-            </li>
+        <li>
+            <input type="checkbox" name="done" {% if todo['done'] %} checked disabled onchange="this.form.submit()" {%endif %}>
+            <span {% if todo['done'] %} style="text-decoration: line-through;" {% endif %}>{{ todo['task'] }}</span>
+            <a href="{{url_for('check', index=loop.index0)}}">Check</a>
+            <a href="{{url_for('edit', index=loop.index0)}}">Edit</a>
+            <a href="{{url_for('delete', index=loop.index0)}}">Delete</a>
+        </li>
         {% endfor %}
     </ul>
-    <form action="{{url_for('add') }}" method="post">
+    <form action="{{ url_for('add') }}" method="post">
         <input type="text" name="todo">
         <input type="submit" value="Add">
     </form>
 </body>
+
 </html>
